--- a/Modeling/syllabus/Segregation.Rmd
+++ b/Modeling/syllabus/Segregation.Rmd
@@ -154,7 +154,7 @@ final$priceperroom = as.numeric(ifelse(final$room_type == T,  final$numPrice,  f
 Let's retrieve census shape files and data from the census API
 ```{r prepmap, include=FALSE}
 
-city = "toronto"
+city = "montreal"
 
 
 if(city == "toronto"){
@@ -170,8 +170,7 @@ if(city == "montreal"){
   censuscode = cm
 }
 
-
-city_data = subset(final, city %in% citynames )
+city_data = subset(final, city %in% citynames)
 
 ## Identifying the vectors for visible Minority status
 parent_vector <- "v_CA16_3954"
@@ -234,10 +233,180 @@ cma.ct <- get_census("CA16", regions=list(CMA=censuscode),
   addLegend(pal = pal, position = 'topleft', values = city_data$priceperroom)
 
  map
-  
+ 
+```
+ 
 
+
+  and map!
+  
+```{r diversitymapprep, include=F}
+ 
+diversity_index <- function(cma) {
+   
+   cma.ct <- get_census("CA16", regions=list(CMA=cma), 
+                       vectors = minority_vectors, level = "CT",
+                       labels = "short", geo_format = NA)
+  
+  # Calculating diversity (Theil's E)
+  # For every variable, divide by v_CA16_3999 and multiply times the logged inverse proportion, then
+  # take the sum for each tract. With 14 different groups, the max entropy is ln(14) = 2.64
+  base_pop <- quo(v_CA16_3954)
+  cma.ei <- cma.ct %>% 
+    group_by(GeoUID) %>% 
+    mutate_at(minorities, funs(S = ./!!base_pop)) %>%
+    mutate_at(vars(ends_with("_S")), funs(E = -.*(log(.)))) %>%
+    select(GeoUID, ends_with("_S_E")) %>% 
+    ungroup() %>% 
+    mutate_at(vars(ends_with("_S_E")), funs(ifelse(is.nan(.),0,.))) %>% 
+    mutate(Ei = rowSums(select(.,-1), na.rm = FALSE)) %>% 
+    select(GeoUID, Ei)
+  
+   # Join with geography
+  
+  cma.geo <- get_census_geometry("CA16", regions=list(CMA=cma), 
+                                 level = "CT", geo_format = "sf")
+  cma.ct <- cma.geo %>% 
+    left_join(cma.ei) %>% 
+    mutate()
+  
+  return(cma.ct)
+}
+  
+tractTable <- diversity_index(censuscode)
 ```
 
+```{r diversitymap}
+
+  pal <- colorQuantile(
+     palette =  'Blues',
+     domain = city_data$priceperroom,
+     n = 10
+   )
+      pal2 <- colorQuantile(
+     palette =  'Reds',
+     domain = tractTable$Ei,
+     n = 10)
+
+   map <- leaflet() %>% addProviderTiles("CartoDB.Positron") %>%
+      addPolygons(
+      data = csd.csd.geo,
+      color = 'black',
+      fill = F,
+      weight = 0.7,
+      opacity = 0.9
+    ) %>% addPolygons(
+      data = tractTable,
+      color =  ~ pal2(Ei),
+      fill = ~ pal2(Ei),
+       weight = 0.4
+    ) %>%
+  #addCircleMarkers(
+  #   data = city_data,
+  #       radius = ~ sqrt(4 * rooms),
+  #   lat = ~ latitude,
+  #   fillColor = ~ pal(priceperroom),
+  #   color = 'black',
+  #   stroke = T,
+  #   fillOpacity = 0.5,
+  #  weight = 0.1,
+  #   layerId = ~ id,
+  #   lng = ~ longitude
+  # ) %>% 
+# addLegend(pal = pal, position = 'topleft', values = city_data$priceperroom)%>% 
+  addLegend(pal = pal2, position = 'topleft', values = tractTable$Ei)
+ 
+   map
+```
+
+
+```{r segmapprep, include=F}
+
+  cma.eict <- tractTable
+  
+  cma.csd <- get_census("CA16", regions=list(CMA=censuscode), 
+                        vectors = minority_vectors, level = "CSD",
+                        labels = "short", geo_format = NA)
+ 
+  cma.eicsd <- cma.csd %>%
+    group_by(GeoUID,`Region Name`, Population) %>%
+    mutate_at(minorities, funs(S = ./!!base_pop)) %>%
+     mutate_at(vars(ends_with("_S")), funs(E = -.*(log(.)))) %>%
+        select(GeoUID, `Region Name`, Population, ends_with("_S_E")) %>% 
+    ungroup() %>%
+    mutate_at(vars(ends_with("_S_E")), funs(ifelse(is.nan(.),0,.))) %>%
+    mutate(Ei = rowSums(select(.,-c(1,2,3)), na.rm = FALSE)) %>%
+    mutate(CMA = censuscode) %>%
+    select(CMA, GeoUID, `Region Name`, Population, Ei)
+  
+  dfseg <- data.frame(cma.eict, cma.eicsd[match(cma.eict$CSD_UID, cma.eicsd$GeoUID),])
+
+  cma.h <- dfseg  %>%
+     select(GeoUID, CSD_UID, name = `Region.Name`, ctpop = Population,
+           csdpop = Population.1, ctei = Ei, csdei = Ei.1)  %>%
+    filter(csdpop > 1000) %>%
+     group_by(GeoUID, CSD_UID) %>%
+    #  mutate_at(csdei, funs(ifelse(is.nan(.),0,.))) %>%
+   mutate(smallh = ifelse(csdei == 0, NA, (ctpop*(csdei - ctei))/(csdei*csdpop)) ) %>%
+    ungroup() %>%
+    group_by(CSD_UID, csdei, name, csdpop) %>%
+    mutate(smallhp = ifelse(is.na(smallh), 0, smallh)) %>%
+  summarise(H = sum(smallhp)) %>% 
+    mutate(cma = censuscode)
+  
+   cma.csd <- get_census("CA16", regions=list(CMA=censuscode), 
+                        vectors = minority_vectors, level = "CSD",
+                        labels = "short", geo_format = NA)
+# 
+#    segdata <- cma.csd %>% 
+#     left_join(cma.h,  by = c("CSD_UID"="GeoUID")) %>% 
+#     mutate()
+#   
+ 
+```
+
+```{r segmap}
+
+  pal <- colorQuantile(
+     palette =  'Blues',
+     domain = city_data$priceperroom,
+     n = 10
+   )
+      pal2 <- colorQuantile(
+     palette =  'Reds',
+     domain = cma.h$H,
+     n = 10)
+
+#    map <- leaflet() %>% addProviderTiles("CartoDB.Positron") %>%
+#       addPolygons(
+#       data = csd.csd.geo,
+#       color = 'black',
+#       fill = F,
+#       weight = 0.7,
+#       opacity = 0.9
+#     ) %>% addPolygons(
+#       data = cma.h,
+#       color =  ~ pal2(H),
+#       fill = ~ pal2(H),
+#        weight = 0.4
+#     ) %>%
+#   #addCircleMarkers(
+#   #   data = city_data,
+#   #       radius = ~ sqrt(4 * rooms),
+#   #   lat = ~ latitude,
+#   #   fillColor = ~ pal(priceperroom),
+#   #   color = 'black',
+#   #   stroke = T,
+#   #   fillOpacity = 0.5,
+#   #  weight = 0.1,
+#   #   layerId = ~ id,
+#   #   lng = ~ longitude
+#   # ) %>% 
+# # addLegend(pal = pal, position = 'topleft', values = city_data$priceperroom)%>% 
+#   addLegend(pal = pal2, position = 'topleft', values = cma.h$H,n = 10)
+#  
+#    map
+```
 
 
 Let's use the information theory to qualify *diversity* and *segregation* of a given city (cf. John Iceland et al on multigroup entropy: https://www.census.gov/hhes/www/housing/resseg/multigroup_entropy.pdf). The measure have been implemented are described below and tested on Canadian metropolisis from package `cancensus` (example by @dshkol: https://github.com/dshkol/scratchpad/blob/master/content/post/2018-05-10-diversity-and-segregation-i.Rmd).
